Updates for visual bugs on mobile and videos not autoplaying

--- a/src/components/Confirmation/confirmation.css
+++ b/src/components/Confirmation/confirmation.css
@@ -35,6 +35,7 @@
 .confirmation_gif {
 	width: 240px;
 	border-radius: 1rem;
+	max-width: 50%;
 }
 
 .form_section_radio {
