--- a/src/components/Timer/timer.css
+++ b/src/components/Timer/timer.css
@@ -2,6 +2,7 @@
 	font-size: 28px;
 	background: #fcf4e8;
 	display: flex;
+	flex-direction: row;
 	gap: 1rem;
 	padding: 0.8rem 2rem;
 	border-radius: 0.4rem;
@@ -11,4 +12,16 @@
 .date_day,
 .date_hours {
 	font-weight: 600;
+}
+
+@media screen and (max-width: 400px) {
+	.timer {
+		flex-direction: column;
+		align-items: center;
+	}
+
+	.date_colons {
+		display: none;
+	}
+	
 }
